--- a/ProyectoFinal/GUI/NuevoUsuario.resx
+++ b/ProyectoFinal/GUI/NuevoUsuario.resx
@@ -120,13 +120,13 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAEXSURBVFhH7dU9agJBGIDhLQIx2MXONCkiCSJqRBO8RFKk
-        NUUO4AW8gI1H0EILL2FlIfZWOUHMj5oEkjp5vw3Csny4y+wyEpgXHnAGmRnWdddzuVz/tXOMcOePLFfE
-        M37wLRM2K+EVsvmWtcp4Q3Bzawe4xArhza0coIYNtM3FI8a4Rxap1sA7tI01ctAODpG4a3xA2yjKAgUY
-        18QntMXjknumCqPSOIBY4gRGXcH0JwiawLg6dv0D4rqFcfIMWENbOK4ZElWB9hQUB8hBbrgWBtCu2ikS
-        Je+BF4QX1sqgjeBBHpC44Jtw1wG25TGHfK8nE2l0gSfIol8yEdERphj6o5Q6Qx83/ii6Y3T/Pu4vuRIu
-        lyuU5/0C1rmxH5C9ZBsAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAARdJREFUWEft1T1qAkEYgOEtAjHYxc40KSIJImpEE7xEUqQ1RQ7gBbyAjUfQQgsv
+        YWUh9lY5QcyPmgSSOnm/DcKyfLjL7DISmBcecAaZGdZ113O5XP+1c4xw548sV8QzfvAtEzYr4RWy+Za1
+        ynhDcHNrB7jECuHNrRyghg20zcUjxrhHFqnWwDu0jTVy0A4OkbhrfEDbKMoCBRjXxCe0xeOSe6YKo9I4
+        gFjiBEZdwfQnCJrAuDp2/QPiuoVx8gxYQ1s4rhkSVYH2FBQHyEFuuBYG0K7aKRIl74EXhBfWyqCN4EEe
+        kLjgm3DXAbblMYd8rycTaXSBJ8iiXzIR0RGmGPqjlDpDHzf+KLpjdP8+7i+5Ei6XK5Tn/QLWubEfkL1k
+        GwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
