--- a/ProyectoFinal/GUI/ConsultarLibreria.resx
+++ b/ProyectoFinal/GUI/ConsultarLibreria.resx
@@ -129,4 +129,34 @@
         GwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnConsultar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAWgSURBVGhDzVr/U1RVFN9fqj+gb1NNvzXVf+JPjek4ScQX
+        BSEhwJDdJ19mKjS1UHGBglBzkqmY0PceX8YvizW83UIEVkZECQuHtIYxBzG/Ug5wOudy9y3Lnn277+0C
+        fmY+M+u7977zOY9zz73nXl2pgOeX9pc9fvU9d0BvQHa7Df2a21CnFUN/TKTf9EwJ6D7Fr9Xjs/RKv/qS
+        HL46qAj88LzH0LahqAtIcEKPoQeVgFqyvafzOfna5cd2v/6q/NIznChHNPRHHr9eV3qu6xVpJvUoPnXq
+        GU9AryRjrIgUEEPt4Q6/Vv7x5banpdnUoKLnxJvugHqJM7osNLRhnFdvSPPJQQm0b8A4fcAaWlaiTUNb
+        L2U4ww6/+oFiqPO8gRUg2vb4ta1Sjj1gvBeyL10F2nZChM1qfvmlRC3un9vXSXnWoAm7OjFvTUzb98sD
+        2utSJg9KlSuabWwSV/OLlilW5Hlm4EoS1wH2+SIqUm4kaIVdzkUqHj85+R10lJdBb1YmHGrcx/Yh0mJH
+        ey8pOwyxyWIGrAS9LV9CIGcz9GVkCHYXFbD9TBparZS9ANqY2d3bbPe1wabP98O7yi5IU3Y6YjryizKP
+        KZx4LjMT6muqWZsmMVIiNoByV8l3Zuj+6QRsKKyCtZlljvk2sjkzL0L82bxc+KhuDxQeP8zajaBfK5Ly
+        Ke/b2xK/f6iJFZUoSfzXS8S35edByZFaId7To7J2FxMTzoAQTxOC62DFnIN1ppi65lYYGR1PnFd+h+CB
+        gxHim9OyYKOiQElXC2svFit+7HjRRZUU12jFXG/YgVbNB3bwV2dnhPjGtGxYsy4XMnbtZm1ZEWuIjS4q
+        TrhGKzp1YHpoKEJ8V0kprFm/Bd5K3wbZn9WwtuLQSw50Mw2W5Bx4MDEBv9bUwI3jxwHm58Wzxfj31i0Y
+        yM83xQ9WVIC34bAQT+9x5IBfP+2SxTbfIQY5B0h8SNzkyZPiWQjzc3NwubrabD9fUAAjg4NwrLXTfI9D
+        B8bRAXWabbQg58DY0aNhgVlZcO/qVfGcQA6F2vowzw+fOQP/3LkjxibjAEbPlAsXhcdcoxU5BybGr8EA
+        ZpKQ0AvFxfD47l0ROv05OebzoaYmmJycFGOSdsDQ/0uZA48ePoSR3l44nxfO76N798JYba357/7SUhgf
+        G4M5DClCShxIVQgRbt++DRc7OkzBS3nJ54OZmRnZOwUOUAilahKH8OeNG3ChsTFKfHDPHvj75k3ZawHJ
+        OiAmMf7wRTXEoZUDs7Oz8BuGyUBVVdgBnNSjfX1m6ISQAgdOO9pGWzlAoDC5gmmS0qX4+jgP7kxPy9Yw
+        knaAFjKcxOlMgyXjOUCgNDkSDMJwd7f4i8wzi1vSDhjaOy46JWYbLZiIA4SpqSm4/sd1kaE4JOtAWa/6
+        wsKOVJwS8504JupAPCTjAGagfiGeQEfcXKdYzK1vMA1vKf0UKnc3OiKNNR2oiV0Hc6RTQykfC3osz+wU
+        9CVqi2k4Jcxyw9ZjX7G2OFJhX35We1bKXwCdz3OdYzFjJ349NMwKssPsMlELfHjqW9YOR9R6QMoOgy4X
+        yDNuAMet32MIHPHC5rr9sMm7zxFpLL2D3oV1OWsnmuqDmNdTdLnAD4om1a3F7d+IGrag7ZAj0lh6h8eI
+        XwOb9OtuKTcadGxHlwvswCeAnoA2lB9sfkrK5UE3I0/i4a5iqPfKezpekzKtQTcjT9LxOm445zC810p5
+        iYEuFbiXrQ61PCnLHoQTq/iXoC/vWHwIdDOCy/Z9zsCyEmPedtjEAt2M4Ne4yBpaBlK2SXjCJgqRYgO6
+        Ymexs0/Mfpjn46bKZCDOUg2t1s7eKR4XPoq2f0X/A4jYAPq1Ijol5kQlQtoS064yamO20qBTYjpoRVFe
+        qlOp2KYTAzr2EMTf9Ey0UR+spMxiJCm4XP8DE6LnlUJkp24AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
