--- a/ProyectoFinal/GUI/EliminarAccesorio.resx
+++ b/ProyectoFinal/GUI/EliminarAccesorio.resx
@@ -129,4 +129,31 @@
         GwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAATKSURBVGhD7ZldaBxVFMe3fqKIVQt+URAFa53dtdXFsDM7
+        s1ObKgXtzmw0iuIHFeonil8PSrGNIkIfpAZ3ZzZRKaKgBKrUPihC/cAXH4pmZjalFARRwSdF9KGCYvyf
+        u/+uTDpLNsnMEjE/uGT/B3LOPffeuefemdwKK6yQHro3c63hRzsrfjTWqxmt8Cm70b6Y/7J8qEy0Td2P
+        /kQnZ+dtzehHe+835/FflwdGM2ohgV+Gxo+dS1MiZjO0O4mEt9O0PEDH3IoXPUHZExl5JDBmNNobacqW
+        cisoGn5wEGv788G24KDuTRfYjcUjjrBmf00Okl2TmLoXfshuLJ4TDikHRmpx//MJ6M3gM7RpPHibBtkk
+        psRmNxaP4YW74fDkvXwQzQufZzeWhtUKroPDxJHKqklVZ/j0QKE6LLsSZeqguH2MnecryvRBgEMI8CVl
+        F61aq5VKD5xOGSNvObfyZwzNrm8tlW45m1IhnZckKNNH94L9mN6Isgs6OVXYvO0iyhhILnEnKVSdd9db
+        9UsoFfB9tOIF71GmD7a1N3Fc+IGyS77q7iuaI1dQxuiZgOke2GA7sQMdludPiDFBmT7o/Cu6H/xO2QWj
+        2ShWnSJljF4JaKbziaaNnkGpwLZ5HDvPHsr0MfxwF6Z5dnRq6lSaFAXL3VO062XKGD0T6NhXdVQut3X8
+        2JniG8/AczSlDx6yxyVI+fX2BTQpClV3V9F0hiljzJNAFxzcLhTfph89QlP6IMC9KogXxtY7ltDT6FCN
+        Mka/CZiT0+vUDHjBXTSlj+G1axJEChtNioLlPKjZ7p2UMfpNoOy3h8S33gxvpil9TtymdK+9mSYFdpS7
+        kcAOyhj9JoC1f6OaXT+q0JQ+CLBBglRa0QhNikK1VkctSLyN9ZsAluWo8t2YydOUPnpj5jI1A81wO02K
+        vOXehFqwkzJGjwRWzbUbfnuH+B6aDNbSlD6licOrJQiCPUmTIm+OVPJV52XKGEkJlMu3nYXn5iNKBfw+
+        I77tRvscmjJg9+wplWbwNwraC7QoNNvZqFnOOGWMpATWD7trNMt9n1KBAvaS3oz+oswOuatipGKdvbo6
+        ciVqwRuUMZISQNFbixl7h1KBItnA4PxMmR0VP/gOl5y3KBVXGbVL5XBGGSMpgWtMdx2W0CSlAoPyNo7r
+        31JmR+d6GR6gVJS2jK7GcSLxDUJSArLkCqbzKqVCvf3ww68pswPr/4u5l23btk/DDByijJGUALZcY+5D
+        L/cMzO6nlNkhoy+zQNklqaNC8jNQ24IlFLvvYmBCDMwHlNkh61+eA8ouC0kAo79Nzk+UChzTv0cS+yiz
+        Q3Yg2YkouywoAcu5I2+7D1MqsAP9hp1oL2V2YJpflFogNYEmxUISKNi17agD91H+W1/8aIyW7JAPFFIx
+        pSrTpFhIAppVfxS1YJRSzkHni08soXnfbi8ZVMz7JZici2hSaFXH588Yeat20h03bzv3yPGDMmdNTl+u
+        fM45Y2WCnETVaOFkStOSkW8FHZ9hnabsMJrRDRJM/tK0ZMxWMMxB2URTdlz/2pE12PL+kD17vs9J/SDP
+        kvqY0QyOD+y7GR7kx7hrdF7CLrXBF3w+RPeDQb3w9cJn0YHEz6l9N/jI5EXuCiv8L8jl/gH/AtdJXoRD
+        cQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
